--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,27 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: tituloCutout;
+  src: url(/Eighties-Regular.otf);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-family: textoCutout;
+  src: url(/Mondwest-Regular.otf);
 }
 
-* {
-  box-sizing: border-box;
+.titulo{
+
+  font-family: tituloCutout;
+  /*font-size: 4rem;*/
+}
+
+.textoCutout{
+
+  font-family: textoCutout;
+ /*font-size: 1.5rem;
+ padding-right: 30px;*/
+
 }
